--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -2,51 +2,33 @@
   {% assign education = data[1] | sort: 'startDate' | reverse %}
   {% for content in education %}
     <li class="list-group-item">
-      <div class="row">
-        <div class="col-xs-2 cl-sm-2 col-md-2 text-center date-column">
-          {% if content.startDate and content.startDate != '' %}
-            {% assign startDate = content.startDate | split: '-' | slice: 0, 2 | join: '.' %}
-            {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
-            {% assign date = startDate | append: ' - ' %}
-            {% assign date = date | append: endDate %}
-          {% else %}
-            {% assign date = null %}
-          {% endif %}
-          <table class="table-cv">
-            <tbody>
-              <tr>
-                <td>
-                  {% if date %}
-                    <span class="badge font-weight-bold danger-color-dark text-uppercase align-middle" style="min-width: 75px"> {{ date }} </span>
-                  {% endif %}
-                </td>
-              </tr>
-              {% if content.location %}
-                <tr>
-                  <td>
-                    <p class="location">
-                      <i class="fa-solid fa-location-dot iconlocation"></i>
-                      {{ content.location }}
-                    </p>
-                  </td>
-                </tr>
-              {% endif %}
-            </tbody>
-          </table>
-        </div>
-        <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
-          <h6 class="title font-weight-bold ml-1 ml-md-4">
+      <div class="d-flex justify-content-between align-items-start flex-wrap mb-2">
+        <div>
+          <h6 class="title font-weight-bold mb-0">
             <a href="{{ content.url }}">{{ content.studyType }}</a>
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.institution }}</h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.area }}</h6>
-          <ul class="items">
-            {% for item in content.courses %}
-              <li>
-                <span class="item">{{ item }}</span>
-              </li>
-            {% endfor %}
-          </ul>
+          <h6 class="mb-0" style="font-size:0.95rem;">{{ content.institution }}</h6>
+          <h6 class="mb-0" style="font-size:0.95rem; font-style: italic;">{{ content.area }}</h6>
+          {% if content.courses %}
+            <ul class="items mt-1">
+              {% for item in content.courses %}
+                <li><span class="item">{{ item }}</span></li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+        </div>
+        <div class="text-right flex-shrink-0" style="min-width: 90px;">
+          {% if content.startDate %}
+            {% assign startDate = content.startDate | split: '-' | slice: 0,2 | join: '.' %}
+            {% assign endDate = content.endDate | split: '-' | slice: 0,2 | join: '.' | default: 'Present' %}
+            <span class="badge font-weight-bold danger-color-dark text-uppercase">{{ startDate }} - {{ endDate }}</span>
+          {% endif %}
+          {% if content.location %}
+            <p class="location mb-0 mt-1">
+              <i class="fa-solid fa-location-dot iconlocation"></i>
+              {{ content.location }}
+            </p>
+          {% endif %}
         </div>
       </div>
     </li>
